# dart_simple_live

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_BUILD_FLOW.md  UPDATE-2026.5.4-1.12.0.md  UPDATE.md  build_android_apk.bat  deploy_windows.bat
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug报告.md  config.yml  feature.yml  功能请求.md
.github/workflows/: Android.yml  Windows_build.yaml  android-build.yml  android.yml  app-build-action  build.yaml  build_android_myself.yml  build_app_debug_manual.yml  build_macos.yml  iOS_build.yml  ios-build.yml  pr.yaml  publish_android_dev.yaml  publish_app_dev.yaml  publish_app_flatpak.yaml  publish_app_release.yml  publish_app_release_linux.yml  publish_app_release_macos_manual.yml  publish_app_release_windows.yml  publish_macos_app_release.yml  publish_tv_android.yaml  publish_tv_android_dev.yaml  (+4 more)
assets/: app_version.json  play_config.json  tv_app_version.json  update-linux-metainfo.dart
flatpak/: com.xiaoyaocz.simple_live.desktop  com.xiaoyaocz.simple_live.metainfo.xml  com.xiaoyaocz.simple_live.yaml  flatpak-manifest.yaml
simple_live_app/: .fvmrc  .gitignore  .metadata  README.md  analysis_options.yaml  distribute_options.yaml  pubspec.yaml  shorebird.yaml
simple_live_app/rust/: Cargo.toml
simple_live_app/rust/src/: frb_generated.rs
simple_live_app/rust/src/api/: danmaku_mask.rs  mod.rs  simple.rs
simple_live_console/: .gitignore  README.md  pubspec.yaml
simple_live_core/: .fvmrc  .gitignore  README.md  pubspec.yaml
simple_live_tv_app/: .fvmrc  .gitignore  .metadata  README.md  pubspec.yaml
(+691 files in other folders)
