[package]
name = "rust_lib_simple_live_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
regex = "1.12.2"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
lazy_static = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
